fix z-index for section__title h2

--- a/src/styles/components/_products-menu.scss
+++ b/src/styles/components/_products-menu.scss
@@ -12,6 +12,7 @@
 
   &__item {
     display: flex;
+    z-index: 2;
   }
 
   &__title {
